# plugins

./: CMakeLists.txt  set_gpio_pins.sh
addaboard/: CMakeLists.txt  addaboard.cpp  addaboard.h
bms/: CMakeLists.txt  bms.cpp  bms.h  bms.pro  bmstags.cpp  bmstags.h
ds18b20/: CMakeLists.txt  ds18b20.cpp  ds18b20.h  ds18b20.pro
heater/: CMakeLists.txt  button.cpp  button.h  heater.cpp  heater.h  heater.pro  motor.cpp  motor.h  preheatunit.cpp  preheatunit.h  pump.cpp  pump.h  wiringpiwrapper.cpp  wiringpiwrapper.h
include/: plugininterface.h
mcp3008/: CMakeLists.txt  mcp3008.cpp  mcp3008.h  mcp3008.pro  wiringpiwrapper.cpp  wiringpiwrapper.h
numato/: CMakeLists.txt  config.cpp  config_numato.json  numato.cpp  numato.h  util.cpp  util.h
pigpio/: CMakeLists.txt  pigpio.cpp  pigpio.h  pigpio.json  pigpio.xml  pigpioapi.cpp  pigpioapi.h  pin.cpp  pin.h  wiringpiwrapper.h
plugincore/: CMakeLists.txt  motor.cpp  motor.h  path.cpp  path.h  plugin.cpp  plugin.h  telnet.cpp  telnet.h  wiringpiwrapper.cpp  wiringpiwrapper.h
pluginload/: CMakeLists.txt  plugininterface.h  pluginloader.cpp  pluginloader.h  pluginloader.pro
runner/: CMakeLists.txt  runner.pro
runner/src/: app.cpp  app.h  main.cpp
template_match/: CMakeLists.txt  template_match.cpp  template_match.h
victronenergy/: CMakeLists.txt  battery.cpp  battery.h  mppt.cpp  mppt.h  victronenergy.cpp  victronenergy.h
